src/assets/main.css
@import './base.css';

h1,h2,h3,h4,h5,p{
  color: #EAEAEA;
  /*Family Roboto or Atma ?*/
}

a{
  text-decoration: none;
  color: #6495ed;
}
a:visited{
  color: #6495ed;
  text-decoration: none;
}

.test{
  border: red dotted 2px;
}

.button{
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 5px;
  padding-bottom: 5px;
  border: none;
  border-radius: 6px;
  cursor: pointer;
  text-align: center;
}

